# radial_quadrifocal

./: .README.md.swp  .gitignore  CMakeLists.txt  README.md  setup.py
cmake/: CMakeRegistry.cmake  LibraryConfig.cmake  SetEnv.cmake
eval/: .commands_noise.txt.swp  commands.txt  commands_nanson2.txt  commands_noise.txt  commands_stab.txt  noise_test_13explicit.py  noise_test_13implicit.py  noise_test_15linear.py  noise_test_7explicit.py  noise_test_7implicit.py  noise_test_compare.py  noise_test_lin15.py  noise_test_nanson2.py  noise_test_our13.py  noise_test_our7.py  stability_test_13explicit.py  stability_test_13implicit.py  stability_test_15linear.py  stability_test_7explicit.py  stability_test_7implicit.py  stability_test_lin15.py  stability_test_nanson2.py  stability_test_our13.py  stability_test_our7.py  stability_test_upright_nanson.py  starting_system.txt  test.py  test_lin_solver.py  test_ransac.py  test_sfm.py  test_solver.py
eval/results/: legacy_noise_13.txt  legacy_noise_15.txt  legacy_noise_7.txt  noise_13.txt  noise_15.txt  noise_7.txt
eval/utils/: read_write_model.py  sfm_reader.py
pybind/: .pyrqt.cc.swp  CMakeLists.txt  pyrqt.cc
rqt/: CMakeLists.txt  homotopy.h  linear_radial_quadrifocal_solver.cc  linear_radial_quadrifocal_solver.h  metric_upgrade.cc  metric_upgrade.h  nanson2_homotopy.h  nanson2_radial_quadrifocal_solver.cc  nanson2_radial_quadrifocal_solver.h  nanson_homotopy.h  nanson_radial_quadrifocal_solver.cc  nanson_radial_quadrifocal_solver.h  quadrifocal_estimator.cc  quadrifocal_estimator.h  radial_quadrifocal_solver.cc  radial_quadrifocal_solver.h  ransac_impl.h  solver_det4.cc  solver_det4.h  types.cc  types.h  upright_filter_cheirality.cc  upright_filter_cheirality.h  upright_homotopy.h  upright_nanson_homotopy.h  upright_nanson_radial_quadrifocal_solver.cc  upright_nanson_radial_quadrifocal_solver.h  upright_radial_quadrifocal_solver.cc  upright_radial_quadrifocal_solver.h
